<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Usuario</string>
    <string name="hello_world">Hello world!</string>
    <string name="usuario">Usuario</string><string name="contra">Contraseña</string><string name="entrar">Entrar</string><string name="ingre">ingreso</string><string name="email">Email</string><string name="asunto">Asunto</string><string name="mensaje">Mensaje</string><string name="enviar">Enviar</string><string name="action_settings">Settings</string>
    
    
    
    
    
    
    
    

</resources>
